--- a/Project/weather.html
+++ b/Project/weather.html
@@ -66,7 +66,8 @@
                         aria-label="Search" aria-describedby="search-addon" />
                     <label for="floatingInput">es. Milan, IT</label>
                 </div>
-                <button type="button" class="btn btn-outline-primary flex-shrink-0" onclick="showMe()">search</button>
+                <button type="button" class="btn btn-outline-primary flex-shrink-0" onclick="">search</button>
+                <button type="button" class="btn btn-outline-secondary flex-shrink-0" onclick="getLocation()"><img src="images/location.png"></button>
             </div>
 
             <div id="*" class="pt-5">
