added alt to images + js

--- a/Project/index.html
+++ b/Project/index.html
@@ -68,7 +68,7 @@
                     <label for="floatingInput">es. Milan, IT</label>
                 </div>
                 <button type="button" class="btn btn-outline-primary flex-shrink-0" onclick="showMe()">search</button>
-                <button type="button" class="btn btn-outline-secondary flex-shrink-0" onclick="getLocation()"><img src="images/location.png"></button>
+                <button type="button" class="btn btn-outline-secondary flex-shrink-0" onclick="getLocation()"><img src="images/location.png" alt="posizione"></button>
             </div>
 
             <!-- card città inserita dall'utente -->
@@ -79,7 +79,7 @@
                     </div>
                     <div id="hidden-card-body" class="card-body">
                         <p class="card-text">data</p>
-                        <img src="http://openweathermap.org/img/wn/" class="card-img-top">
+                        <img src="http://openweathermap.org/img/wn/" alt="" class="card-img-top">
                         <h5 class="card-title">meteo</h5>
                         <div id="alert" class="badge rounded-pill text-dark"></div>
                         <ul class="list-group list-group-flush">
@@ -101,7 +101,7 @@
                         </div>
                         <div id="card-milano" class="card-body">
                             <p class="card-text">data</p>
-                            <img src="http://openweathermap.org/img/wn/" class="card-img-top">
+                            <img src="http://openweathermap.org/img/wn/" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <div id="alert-milano" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
@@ -120,7 +120,7 @@
                         </div>
                         <div id="card-londra" class="card-body">
                             <p class="card-text">data</p>
-                            <img src="http://openweathermap.org/img/wn/" class="card-img-top">
+                            <img src="http://openweathermap.org/img/wn/" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <div id="alert-londra" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
@@ -139,7 +139,7 @@
                         </div>
                         <div id="card-tokyo" class="card-body">
                             <p class="card-text">data</p>
-                            <img src="http://openweathermap.org/img/wn/" class="card-img-top">
+                            <img src="http://openweathermap.org/img/wn/" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <div id="alert-tokyo" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
@@ -158,7 +158,7 @@
                         </div>
                         <div id="card-newyork" class="card-body">
                             <p class="card-text">data</p>
-                            <img src="http://openweathermap.org/img/wn/" class="card-img-top">
+                            <img src="http://openweathermap.org/img/wn/" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <div id="alert-newyork" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
