--- a/Project/weather.html
+++ b/Project/weather.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta keywords="meteo, meteo live, weather, app meteo, web weather">
+    <meta name="keywords" content="meteo, meteo live, weather, app meteo, web weather">
     <meta name="description" content="Un'applicazione web per monitorare il meteo di alcune città del mondo.">
 
     <link rel="icon" href="favicon.ico">
@@ -63,7 +63,7 @@
             <div class="input-group p-3 d-flex">
                 <div class="form-floating flex-grow-1">
                     <input type="search" class="form-control rounded" id="floatingInput" placeholder="es. Milan, IT"
-                        aria-label="Search" aria-describedby="search-addon" />
+                        aria-label="Search" />
                     <label for="floatingInput">es. Milan, IT</label>
                 </div>
                 <button type="button" class="btn btn-outline-primary flex-shrink-0" onclick="">search</button>
