--- a/Project/weather.html
+++ b/Project/weather.html
@@ -42,12 +42,17 @@
 <body>
     <header>
         <!-- Navbar -->
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="#">
                     <img src="favicon.ico" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
                     Meteo Live
                 </a>
+                <div class="collapse navbar-collapse">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </div>
+                </div>
             </div>
         </nav>
     </header>
@@ -56,7 +61,7 @@
         <div class="container py-3">
             <!-- Main + search bar -->
             <div class="p-3 pb-md-4 mx-auto text-center">
-                <h1>Meteo Settimanale di ...</h1>
+                <h1>Meteo Settimanale di </h1>
                 <p>Usa la barra di ricerca per cercare un'altra città e conoscere le sue previsioni settimanali.<a href="#*">*</a></p>
             </div>
 
