--- a/Project/index.html
+++ b/Project/index.html
@@ -8,12 +8,13 @@
 
     <meta name="keywords" content="meteo, meteo live, weather, app meteo, web weather">
     <meta name="description" content="Un'applicazione web per monitorare il meteo di alcune città del mondo.">
+    <meta name="color-scheme" content="light dark">
 
     <link rel="icon" href="favicon.ico">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link id="css-light" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link id="css-dark" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" disabled>
     <!-- custom css -->
     <link rel="stylesheet" href="css/custom.css">
 
@@ -52,6 +53,10 @@
                         <a class="nav-link active" aria-current="page" href="weather.html">Previsioni Settimanali</a>
                     </div>
                 </div>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" role="switch" id="toggle-mode" onclick="toggleDarkMode()">
+                    <label class="form-check-label" for="toggle-mode">Dark Mode</label>
+                </div>
             </div>
         </nav>
     </header>
@@ -88,7 +93,7 @@
                         <p class="card-text">data</p>
                         <img src="" alt="" class="card-img-top">
                         <h5 class="card-title">meteo</h5>
-                        <div id="alert" class="badge rounded-pill text-dark"></div>
+                        <div id="alert" class="badge rounded-pill text-dark custom-alert"></div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Umidità: </li>
                             <li class="list-group-item">Pressione: </li>
@@ -110,7 +115,7 @@
                             <p class="card-text">data</p>
                             <img src="" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
-                            <div id="alert-milano" class="badge rounded-pill text-dark"></div>
+                            <div id="alert-milano" class="badge rounded-pill text-dark custom-alert"></div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Umidità: </li>
                                 <li class="list-group-item">Pressione: </li>
@@ -129,7 +134,7 @@
                             <p class="card-text">data</p>
                             <img src="" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
-                            <div id="alert-londra" class="badge rounded-pill text-dark"></div>
+                            <div id="alert-londra" class="badge rounded-pill text-dark custom-alert"></div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Umidità: </li>
                                 <li class="list-group-item">Pressione: </li>
@@ -148,7 +153,7 @@
                             <p class="card-text">data</p>
                             <img src="" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
-                            <div id="alert-tokyo" class="badge rounded-pill text-dark"></div>
+                            <div id="alert-tokyo" class="badge rounded-pill text-dark custom-alert"></div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Umidità: </li>
                                 <li class="list-group-item">Pressione: </li>
@@ -167,7 +172,7 @@
                             <p class="card-text">data</p>
                             <img src="" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
-                            <div id="alert-newyork" class="badge rounded-pill text-dark"></div>
+                            <div id="alert-newyork" class="badge rounded-pill text-dark custom-alert"></div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Umidità: </li>
                                 <li class="list-group-item">Pressione: </li>
@@ -220,7 +225,7 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="p-3 mt-auto border-top">
+    <footer class="p-3 mt-auto border-top bg-light">
         <p class="float-end"><a href="#">Privacy</a> &middot; <a href="#">Terms</a> &middot; <a href="#">Back to
                 top</a></p>
         <p>&copy; 2022-2022 Carniselli Davide - Unimi Informatica </p>
