--- a/Project/index.html
+++ b/Project/index.html
@@ -14,6 +14,7 @@
 
     <!-- Bootstrap CSS -->
     <link id="css-light" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- bootstrap dark, credit to: vinorodrigues https://github.com/vinorodrigues/bootstrap-dark-5 -->
     <link id="css-dark" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" disabled>
     <!-- custom css -->
     <link rel="stylesheet" href="css/custom.css">
