--- a/Project/index.html
+++ b/Project/index.html
@@ -13,9 +13,11 @@
     <link rel="icon" href="favicon.ico">
 
     <!-- Bootstrap CSS -->
-    <link id="css-light" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link id="css-light" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- bootstrap dark, credit to: vinorodrigues https://github.com/vinorodrigues/bootstrap-dark-5 -->
-    <link id="css-dark" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" disabled>
+    <link id="css-dark" rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" disabled>
     <!-- custom css -->
     <link rel="stylesheet" href="css/custom.css">
 
@@ -55,7 +57,8 @@
                     </div>
                 </div>
                 <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" role="switch" id="toggle-mode" onclick="toggleDarkMode()">
+                    <input class="form-check-input" type="checkbox" role="switch" id="toggle-mode"
+                        onclick="toggleDarkMode()">
                     <label class="form-check-label" for="toggle-mode">Dark Mode</label>
                 </div>
             </div>
@@ -94,7 +97,7 @@
                         <p class="card-text">data</p>
                         <img src="" alt="" class="card-img-top">
                         <h5 class="card-title">meteo</h5>
-                        <div id="alert" class="badge rounded-pill text-dark custom-alert"></div>
+                        <div id="alert" class="badge rounded-pill text-dark"></div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Umidità: </li>
                             <li class="list-group-item">Pressione: </li>
@@ -116,7 +119,7 @@
                             <p class="card-text">data</p>
                             <img src="" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
-                            <div id="alert-milano" class="badge rounded-pill text-dark custom-alert"></div>
+                            <div id="alert-milano" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Umidità: </li>
                                 <li class="list-group-item">Pressione: </li>
@@ -135,7 +138,7 @@
                             <p class="card-text">data</p>
                             <img src="" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
-                            <div id="alert-londra" class="badge rounded-pill text-dark custom-alert"></div>
+                            <div id="alert-londra" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Umidità: </li>
                                 <li class="list-group-item">Pressione: </li>
@@ -154,7 +157,7 @@
                             <p class="card-text">data</p>
                             <img src="" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
-                            <div id="alert-tokyo" class="badge rounded-pill text-dark custom-alert"></div>
+                            <div id="alert-tokyo" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Umidità: </li>
                                 <li class="list-group-item">Pressione: </li>
@@ -173,7 +176,7 @@
                             <p class="card-text">data</p>
                             <img src="" alt="" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
-                            <div id="alert-newyork" class="badge rounded-pill text-dark custom-alert"></div>
+                            <div id="alert-newyork" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Umidità: </li>
                                 <li class="list-group-item">Pressione: </li>
