--- a/Project/weather.html
+++ b/Project/weather.html
@@ -12,8 +12,10 @@
     <link rel="icon" href="favicon.ico">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link id="css-light" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- bootstrap dark, credit to: vinorodrigues https://github.com/vinorodrigues/bootstrap-dark-5 -->
+    <link id="css-dark" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" disabled>
     <!-- custom css -->
     <link rel="stylesheet" href="css/custom.css">
 
@@ -52,6 +54,10 @@
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </div>
+                </div>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" role="switch" id="toggle-mode" onclick="toggleDarkMode()">
+                    <label class="form-check-label" for="toggle-mode">Dark Mode</label>
                 </div>
             </div>
         </nav>
