--- a/Project/index.html
+++ b/Project/index.html
@@ -229,7 +229,7 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="p-3 mt-auto border-top bg-light">
+    <footer class="footer p-3 mt-auto border-top bg-light">
         <p class="float-end"><a href="#">Privacy</a> &middot; <a href="#">Terms</a> &middot; <a href="#">Back to
                 top</a></p>
         <p>&copy; 2022-2022 Carniselli Davide - Unimi Informatica </p>
