--- a/Project/index.html
+++ b/Project/index.html
@@ -12,6 +12,8 @@
 
     <link rel="icon" href="favicon.ico">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+
     <!-- Bootstrap CSS -->
     <link id="css-light" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
