--- a/Project/weather.html
+++ b/Project/weather.html
@@ -11,6 +11,8 @@
 
     <link rel="icon" href="favicon.ico">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+
     <!-- Bootstrap CSS -->
     <link id="css-light" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -87,7 +89,7 @@
             </div>
 
             <div class="container mt-4">
-                <div id="today-card" class="card">
+                <div id="today-card" class="card text-center">
                     <div class="card-header py-3">
                         <h4 class="my-0 f2-normal">Meteo di Oggi (ogni ora)</h4>
                     </div>
@@ -159,8 +161,8 @@
                 </div>
 
 
-                <div class="row-col">
-                    <h2>Meteo dei 6 giorni successivi (ogni 4 ore)</h2>
+                <div class="row-col text-center py-4">
+                    <h2 class="text-center">Meteo dei 6 giorni successivi</h2>
                     <div class="row-col">
                         <div class="row border border-top-0 border-start-0 border-end-0 border-2">
                             <h5 class="text-center">Meteo Domani</h5>
