--- a/Project/weather.html
+++ b/Project/weather.html
@@ -166,9 +166,9 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <h5 class="text-center">Meteo Domani</h5>
+                                <a data-bs-toggle="collapse" href="#collapse1"><h5 class="text-center">Meteo Domani</h5></a>
                             </div>
-                            <div class="row pt-2">
+                            <div class="collapse row pt-2" id="collapse1">
                                 <div class="col-3 border border-start-0 border-bottom-0 border-top-0 boder-2">
                                     <h6>Mattina</h6>
                                     <p class="mb-0">temp max - temp min - temp percepita</p>
@@ -199,9 +199,9 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <h5 class="text-center">Meteo Domani</h5>
+                                <a data-bs-toggle="collapse" href="#collapse2"><h5 class="text-center">Meteo Domani</h5></a>
                             </div>
-                            <div class="row pt-2">
+                            <div class="collapse row pt-2" id="collapse2">
                                 <div class="col-3 border border-start-0 border-bottom-0 border-top-0 boder-2">
                                     <h6>Mattina</h6>
                                     <p class="mb-0">temp max - temp min - temp percepita</p>
@@ -232,9 +232,9 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <h5 class="text-center">Meteo Domani</h5>
+                                <a data-bs-toggle="collapse" href="#collapse3"><h5 class="text-center">Meteo Domani</h5></a>
                             </div>
-                            <div class="row pt-2">
+                            <div class="collapse row pt-2" id="collapse3">
                                 <div class="col-3 border border-start-0 border-bottom-0 border-top-0 boder-2">
                                     <h6>Mattina</h6>
                                     <p class="mb-0">temp max - temp min - temp percepita</p>
@@ -265,9 +265,9 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <h5 class="text-center">Meteo Domani</h5>
+                                <a data-bs-toggle="collapse" href="#collapse1"><h5 class="text-center">Meteo Domani</h5></a>
                             </div>
-                            <div class="row pt-2">
+                            <div class="collapse row pt-2" id="collapse4">
                                 <div class="col-3 border border-start-0 border-bottom-0 border-top-0 boder-2">
                                     <h6>Mattina</h6>
                                     <p class="mb-0">temp max - temp min - temp percepita</p>
@@ -298,9 +298,9 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <h5 class="text-center">Meteo Domani</h5>
+                                <a data-bs-toggle="collapse" href="#collapse1"><h5 class="text-center">Meteo Domani</h5></a>
                             </div>
-                            <div class="row pt-2">
+                            <div class="collapse row pt-2" id="collapse5">
                                 <div class="col-3 border border-start-0 border-bottom-0 border-top-0 boder-2">
                                     <h6>Mattina</h6>
                                     <p class="mb-0">temp max - temp min - temp percepita</p>
@@ -331,9 +331,9 @@
                     <div class="row-col py-3">
                         <div class="card">
                             <div class="card-header">
-                                <h5 class="text-center">Meteo Domani</h5>
+                                <a data-bs-toggle="collapse" href="#collapse1"><h5 class="text-center">Meteo Domani</h5></a>
                             </div>
-                            <div class="row pt-2">
+                            <div class="collapse row pt-2" id="collapse6">
                                 <div class="col-3 border border-start-0 border-bottom-0 border-top-0 boder-2">
                                     <h6>Mattina</h6>
                                     <p class="mb-0">temp max - temp min - temp percepita</p>
