fixed weekly image and date

--- a/Project/weather.html
+++ b/Project/weather.html
@@ -158,14 +158,14 @@
                         <div class="card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno1">
-                                    <h5 class="text-center">Meteo Domani</h5>
+                                    <h5 class="text-center" id="g1">Meteo Domani</h5>
                                 </a>
                             </div>
                             <div class="collapse card-body pt-0" id="giorno1">
                                 <div class="row pt-2">
                                     <div class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="https://openweathermap.org/img/wn/11d@2x.png" alt="" class="card-img-top weekly-icon">
+                                        <img src="" alt="" class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -199,14 +199,14 @@
                         <div class="card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno2">
-                                    <h5 class="text-center">Meteo Domani</h5>
+                                    <h5 class="text-center" id="g2">Meteo Domani</h5>
                                 </a>
                             </div>
                             <div class="collapse card-body pt-0" id="giorno2">
                                 <div class="row pt-2">
                                     <div class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="https://openweathermap.org/img/wn/11d@2x.png" alt="" class="card-img-top weekly-icon">
+                                        <img src="" alt="" class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -240,14 +240,14 @@
                         <div class="card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno3">
-                                    <h5 class="text-center">Meteo Domani</h5>
+                                    <h5 class="text-center" id="g3">Meteo Domani</h5>
                                 </a>
                             </div>
                             <div class="collapse card-body pt-0" id="giorno3">
                                 <div class="row pt-2">
                                     <div class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="https://openweathermap.org/img/wn/11d@2x.png" alt="" class="card-img-top weekly-icon">
+                                        <img src="" alt="" class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -281,14 +281,14 @@
                         <div class="card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno4">
-                                    <h5 class="text-center">Meteo Domani</h5>
+                                    <h5 class="text-center" id="g4">Meteo Domani</h5>
                                 </a>
                             </div>
                             <div class="collapse card-body pt-0" id="giorno4">
                                 <div class="row pt-2">
                                     <div class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="https://openweathermap.org/img/wn/11d@2x.png" alt="" class="card-img-top weekly-icon">
+                                        <img src="" alt="" class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -322,14 +322,14 @@
                         <div class="card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno5">
-                                    <h5 class="text-center">Meteo Domani</h5>
+                                    <h5 class="text-center" id="g5">Meteo Domani</h5>
                                 </a>
                             </div>
                             <div class="collapse card-body pt-0" id="giorno5">
                                 <div class="row pt-2">
                                     <div class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="https://openweathermap.org/img/wn/11d@2x.png" alt="" class="card-img-top weekly-icon">
+                                        <img src="" alt="" class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -363,14 +363,14 @@
                         <div class="card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno6">
-                                    <h5 class="text-center">Meteo Domani</h5>
+                                    <h5 class="text-center" id="g6">Meteo Domani</h5>
                                 </a>
                             </div>
                             <div class="collapse card-body pt-0" id="giorno6">
                                 <div class="row pt-2">
                                     <div class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="https://openweathermap.org/img/wn/11d@2x.png" alt="" class="card-img-top weekly-icon">
+                                        <img src="" alt="" class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -404,14 +404,14 @@
                         <div class="card">
                             <div class="card-header">
                                 <a data-bs-toggle="collapse" href="#giorno7">
-                                    <h5 class="text-center">Meteo Domani</h5>
+                                    <h5 class="text-center" id="g7">Meteo Domani</h5>
                                 </a>
                             </div>
                             <div class="collapse card-body pt-0" id="giorno7">
                                 <div class="row pt-2">
                                     <div class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="https://openweathermap.org/img/wn/11d@2x.png" alt="" class="card-img-top weekly-icon">
+                                        <img src="" alt="" class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
