--- a/Project/weather.html
+++ b/Project/weather.html
@@ -41,10 +41,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+    integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+    crossorigin=""></script>
+
     <title>Progetto Meteo Live</title>
 </head>
 
-<body onload="weeklyWeather()">
+<body onload="weeklyWeather(); initializeMap()">
     <header>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -446,9 +453,11 @@
 
             </div>
 
-            <div class="container-chart">
+            <div class="container-chart my-3">
                 <canvas id="myChart"></canvas>
             </div>
+
+            <div id="map" class="my-3"></div>
 
             <div id="*" class="pt-3">
                 <p>* I dati sono raccolti usando le API di <a href="https://openweathermap.org/">openweathermap.org</a>
@@ -466,6 +475,7 @@
 
     <script src="js/scriptJS.js"></script>
     <script src="js/createChart.js"></script>
+    <script src="js/createMap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
